fix for problem 10